--- a/templates/course_directory.html
+++ b/templates/course_directory.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Course Directory | Scheduler</title>
-    <link rel="stylesheet" href="/static/style.css"/>
+    <link rel="stylesheet" href="/static/style.css?v=1"/>
 </head>
 <body style="background-color: rgb(217,217,217)">
 <a href="home.html">
