--- a/templates/configure_course.html
+++ b/templates/configure_course.html
@@ -4,6 +4,24 @@
     <meta charset="UTF-8">
     <title>Configure Course</title>
     <link rel="stylesheet" href="/static/style.css?v=1"/>
+    <style>
+        label {
+            display: block;
+            margin-bottom: 0.5rem;
+            font-weight: bold;
+        }
+
+        .checkbox-label {
+            display: flex;
+            align-items: center;
+            gap: 0.5rem;
+            margin-bottom: 0.5rem;
+        }
+
+        .checkbox-label input[type="checkbox"] {
+            margin: 0;
+        }
+    </style>
 </head>
 <body style="background-color: rgb(217,217,217)">
 {#    <br/><a href="/templates/home.html">TA Scheduler</a>#}
@@ -22,45 +40,47 @@
 <div class="alignCourseButtons">
     <div class="addCourseModal">
         <div class="create-course" popover id="createCourse">
-            <div class="createNewCourseModalHeader">
-                <h2>Add new Course</h2>
-            </div>
+            <h1 class="formTitle">Add new Course</h1>
             <div class="modal-header" id="myModal">
                 <div class="modal-dialog">
                     <form action=" " method="post">
                         {% csrf_token %}
                         <input type="hidden" name="form_name" value="create_course">
-                        <div>
-                            <label class="form-label required">Course Name</label>
-                            <input type="text" class="form-control" name="course_name" required>
-                        </div>
-                        <div>
-                            <label class="form-label required">Instructor(s):</label>
-                            {% for instructor in instructors %}
-                                <div>
-                                    <input type="checkbox" name="instructors" value="{{ instructor.id }}">
-                                    {{ instructor.first_name }} {{ instructor.last_name }}
-                                </div>
-                            {% endfor %}
-                        </div>
-                        <div>
-                            <label class="form-label required">TA(s):</label>
-                            {% for ta in tas %}
-                                <div>
-                                    <input type="checkbox" name="tas" value="{{ ta.id }}">
-                                    {{ ta.first_name }} {{ ta.last_name }}
-                                </div>
-                            {% endfor %}
+                        <div class="formTable">
+                            <div class="fullWidth">
+                                <label class="form-label required">Course Name</label>
+                                <input type="text" class="form-control" name="course_name" required>
+                            </div>
+                            <div>
+                                <label class="form-label required">Instructor(s):</label>
+                                {% for instructor in instructors %}
+                                    <label class="checkbox-label">
+                                        <input type="checkbox" name="instructors" value="{{ instructor.id }}">
+                                        {{ instructor.first_name }} {{ instructor.last_name }}
+                                    </label>
+                                {% endfor %}
+                            </div>
+
+                            <div>
+                                <label class="form-label required">TA(s):</label>
+                                {% for ta in tas %}
+                                    <label class="checkbox-label">
+                                        <input type="checkbox" name="tas" value="{{ ta.id }}">
+                                        {{ ta.first_name }} {{ ta.last_name }}
+                                    </label>
+                                {% endfor %}
+                            </div>
+
                         </div>
                         <div class="submitAndCancelButtons">
                             <input type="submit" class="greenBtn" value="Submit">
-                            <button popovertarget="createCourse" popovertargetaction="hide" class="cancelButton">
+                            <button type="button" popovertarget="createCourse" popovertargetaction="hide"
+                                    class="cancelButton">
                                 Cancel
                             </button>
                         </div>
                     </form>
                 </div>
-
             </div>
         </div>
     </div>
@@ -68,9 +88,7 @@
     <button popovertarget="createCourse" class="addCourseAndSectionBtn">Add Course +</button>
     <div class="addSectionModal">
         <div class="create-section" popover id="createSection">
-            <div class="createNewSectionModalHeader">
-                <h2>Add new Section</h2>
-            </div>
+            <h1 class="formTitle">Add new Section</h1>
             <div class="modal-header" id="myModal">
                 <div class="modal-dialog">
                     <form action=" " method="post">
@@ -100,13 +118,13 @@
                                 <label class="form-label required">Day(s):</label>
                                 <div class="day-checkboxes">
                                     {% for day, day_label in days %}
-                                        <div>
+                                        <label class="checkbox-label">
                                             <input type="checkbox"
                                                    name="section_days"
                                                    value="{{ day }}"
                                                    {% if section.days and day in section.days %}checked{% endif %}>
-                                            <label>{{ day_label }}</label>
-                                        </div>
+                                            {{ day_label }}
+                                        </label>
                                     {% endfor %}
                                 </div>
                             </div>
@@ -144,7 +162,8 @@
                         </fieldset>
                         <div class="modal-footer">
                             <input type="submit" class="greenBtn" value="Submit">
-                            <button popovertarget="createSection" popovertargetaction="hide" class="cancelButton">
+                            <button type="button" popovertarget="createSection" popovertargetaction="hide"
+                                    class="cancelButton">
                                 Cancel
                             </button>
                         </div>
