--- a/templates/edit_section_assignment.html
+++ b/templates/edit_section_assignment.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Edit Section Assignment | Scheduler</title>
-    <link rel="stylesheet" href="/static/style.css">
+    <link rel="stylesheet" href="/static/style.css?v=1">
 </head>
 <body style="background-color: rgb(217,217,217)">
 <h1>Edit Section Assignment</h1>
