--- a/templates/profile_page.html
+++ b/templates/profile_page.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Profile Page | Scheduler</title>
-    <link rel="stylesheet" href="/static/style.css">
+    <link rel="stylesheet" href="/static/style.css?v=1">
     <style>
         form {
             background-color: white;
@@ -72,26 +72,28 @@
     <form method="POST" action="{% url 'profile_page' %}">
         {% csrf_token %}
         <input type="hidden" name="form_name" value="edit_user">
-        <input type="hidden" name="username" value="{{ user.username }}">
 
-        <label for="first_name">First Name:</label>
-        <input type="text" id="first_name" name="first_name" value="{{ user.first_name }}" >
-
-        <label for="last_name">Last Name:</label>
-        <input type="text" id="last_name" name="last_name" value="{{ user.last_name }}" >
+        <label for="username">Username:</label>
+        <input type="text" id="username" name="username" value="{{ user.username }}" readonly>
 
         <label for="password">Password:</label>
-        <input type="password" id="password" name="password" value="{{ user.password }}" >
+        <input type="password" id="password" name="password" value="{{ user.password }}">
+
+        <label for="first_name">First Name:</label>
+        <input type="text" id="first_name" name="first_name" value="{{ user.first_name }}">
+
+        <label for="last_name">Last Name:</label>
+        <input type="text" id="last_name" name="last_name" value="{{ user.last_name }}">
 
         <label for="role">Role:</label>
-        <select id="role" name="role" required>
+        <select id="role" name="role" disabled>
             <option value="TA" {% if user.role == "TA" %}selected{% endif %}>TA</option>
             <option value="Instructor" {% if user.role == "Instructor" %}selected{% endif %}>Instructor</option>
             <option value="Admin" {% if user.role == "Admin" %}selected{% endif %}>Admin</option>
         </select>
 
         <label for="email">Email:</label>
-        <input type="email" id="email" name="email" value="{{ user.email }}" required>
+        <input type="email" id="email" name="email" value="{{ user.email }}" >
 
         <label for="phone_number">Phone Number:</label>
         <input type="tel" id="phone_number" name="phone_number" value="{{ user.phone_number }}">
