Fixed pathing for navbar 2

--- a/templates/configure_user.html
+++ b/templates/configure_user.html
@@ -14,9 +14,16 @@
 </head>
 <body style="background-color: rgb(217,217,217)">
 {#    <br/><a href="/templates/home.html">TA Scheduler</a>#}
-<a href="home.html">
-    <img src="/static/Logo.jpeg" alt="TA Scheduler Logo" style="height: 10vh; width: auto;">
-</a>
+<div class="pfplogo1">
+    <a href="home.html">
+        <img src="/static/Logo.jpeg" alt="TA Scheduler Logo" style="height: 10vh; width: auto;">
+    </a>
+</div>
+    <div class="pfplogo2">
+    <a href="profile_page.html" >
+        <img src="/static/moo_deng_profilePic.png" alt="Profile Logo" style="height: 10vh; width: auto;">
+    </a>
+    </div>
 <div class="navbar">
     <a href="admin_home.html" style="padding: 9%">Databases</a>
     <a class="active" href="configure_user.html" style="padding: 9%">Configure Users</a>
