--- a/templates/course_directory.html
+++ b/templates/course_directory.html
@@ -6,10 +6,16 @@
     <link rel="stylesheet" href="/static/style.css?v=1"/>
 </head>
 <body style="background-color: rgb(217,217,217)">
-<a href="home.html">
-    <img src="/static/Logo.jpeg" alt="TA Scheduler Logo" style="height: 10vh; width: auto;">
-</a>
-<a href="profile_page.html" style="margin-left: 95%">Profile</a>
+<div class="pfplogo1">
+    <a href="home.html">
+        <img src="/static/Logo.jpeg" alt="TA Scheduler Logo" style="height: 10vh; width: auto;">
+    </a>
+</div>
+    <div class="pfplogo2">
+    <a href="profile_page.html" >
+        <img src="/static/moo_deng_profilePic.png" alt="Profile Logo" style="height: 10vh; width: auto;">
+    </a>
+    </div>
 <div class="navbar">
     <a href="admin_home.html" style="padding: 9%">Admin Home</a>
     <a href="user_directory.html" style="padding: 9%">User Directory</a>
