--- a/templates/profile_page.html
+++ b/templates/profile_page.html
@@ -54,10 +54,16 @@
 </head>
 <body style="background-color: rgb(217,217,217)">
 <h1>Profile Page</h1>
-<a href="home.html">
-    <img src="/static/Logo.jpeg" alt="TA Scheduler Logo" style="height: 10vh; width: auto;">
-</a>
-<div><a href="profile_page.html" style="margin-left: 95%">Profile</a></div>
+<div class="pfplogo1">
+    <a href="home.html">
+        <img src="/static/Logo.jpeg" alt="TA Scheduler Logo" style="height: 10vh; width: auto;">
+    </a>
+</div>
+    <div class="pfplogo2">
+    <a href="profile_page.html" >
+        <img src="/static/moo_deng_profilePic.png" alt="Profile Logo" style="height: 10vh; width: auto;">
+    </a>
+    </div>
 <div class="navbar">
     {#    <a href="admin_home.html" style="padding: 9vh">Admin Home</a>#}
     <a href="profile_page.html" class="active" style="padding: 23vh">Edit Account</a>
