--- a/templates/admin_home.html
+++ b/templates/admin_home.html
@@ -6,9 +6,16 @@
     <link rel="stylesheet" href="/static/style.css?v=1"/>
 </head>
 <body style="background-color: rgb(217,217,217)">
-<a href="home.html">
-    <img src="/static/Logo.jpeg" alt="TA Scheduler Logo" style="height: 10vh; width: auto;">
-</a>
+<div class="pfplogo1">
+    <a href="home.html">
+        <img src="/static/Logo.jpeg" alt="TA Scheduler Logo" style="height: 10vh; width: auto;">
+    </a>
+</div>
+    <div class="pfplogo2">
+    <a href="profile_page.html" >
+        <img src="/static/moo_deng_profilePic.png" alt="Profile Logo" style="height: 10vh; width: auto;">
+    </a>
+    </div>
     <div class="navbar">
         <a class="active" href="admin_home.html" style="padding: 9%">Databases</a>
         <a href="configure_user.html" style="padding: 9%">Configure Users</a>
