Course directory sections are now accordion drop downs

--- a/static/style.css
+++ b/static/style.css
@@ -107,7 +107,7 @@ Configure User style
 }
 
 summary {
-    background-color: #530e0e;
+    background-color:white;
     padding: 0.625rem;
     cursor: pointer;
 }
