Added "notification" button

--- a/templates/user_directory.html
+++ b/templates/user_directory.html
@@ -27,6 +27,7 @@
 {% load custom_filters %}
 
 <h2 class="container">Users:</h2>
+<a href="https://outlook.office365.com/mail/" class="applyFilter" target='_blank'>Send Notification</a>
 <div class="boxContainer">
     {% for user in users %}
         <div class="whiteBox">
