changed home error message orientation

--- a/templates/home.html
+++ b/templates/home.html
@@ -23,7 +23,7 @@
         <a href="/" style="padding: 9%">Log Out</a>
     </div>
     <h1>Home Page</h1>
-    <p style="text-align: center">{{ message }}
+    <p style="text-align: center">{{ message }}<br>
         <img src="/static/Logo.jpeg" alt="logo" style="width:auto; height:31.25rem"></img>
 </body>
 </html>
